# share-bite

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  garage.toml  go.mod  go.sum  package-lock.json  redis.conf
mcp/admin-auth-server/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
mcp/admin-auth-server/mcp_app/: audit.py  auth.py  config.py  constants.py  http_client.py  logger.py  resources.py  server.py  tools.py
mcp/admin-auth-server/tests/: test_server.py
mcp/business-server/: README.md  pyproject.toml
mcp/business-server/app/: auth.py  client.py  config.py  constants.py  context_recommender.py  main.py  resources.py  tools.py  utils.py
mcp/business-server/docs/: mcp-prompts.md
mcp/business-server/tests/: conftest.py  test_context_recommender.py  test_resources.py  test_tools_analytics.py  test_tools_discovery.py  test_tools_profile_and_venues.py  test_utils_validation_and_access.py
mcp/guest-server/: .env.example  .gitignore  README.md  pyproject.toml  test_auth.py
mcp/guest-server/app/: auth.py  config.py  constants.py  http_client.py  main.py  mcp_base.py  resources.py  server.py  tools.py
mcp/guest-server/app/resources/: __init__.py  api.py  discovery.py
mcp/guest-server/app/tools/: __init__.py  _utils.py  collections.py  customers.py  health.py  posts.py
mcp/guest-server/docs/: mcp-prompts.md
mcp/guest-server/tests/: conftest.py
mcp/guest-server/tests/factories/: __init__.py  guest_responses.py
mcp/guest-server/tests/unit/resources/: test_api.py  test_discovery.py
mcp/guest-server/tests/unit/tools/: test_collections.py  test_customers.py  test_health.py  (+2 more)
mcp/sharebite_common/: README.md  pyproject.toml
mcp/sharebite_common/sharebite_common/: __init__.py  audit.py  auth.py  config.py  errors.py  pagination.py  request_id.py  security.py  testing.py
mcp/sharebite_common/tests/: test_auth.py  test_errors_pagination_audit.py  test_security.py  test_testing_utils.py
(+951 files in other folders)
