[project]
name = "admin-auth-server"
version = "0.1.0"
description = "ShareBite Admin and Authentication MCP Server with strict RBAC and compliance audit logging."
dynamic = ["readme"]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true