[project]
name = "sharebite-business-mcp-server"
version = "0.1.0"
description = "MCP server for ShareBite business-owner operations"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.11.0",
]

[project.scripts]
sharebite-business-mcp = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
