[project]
name = "sharebite-common"
version = "0.1.0"
description = "Shared MCP security and development helpers for Share Bite MCP servers"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sharebite_common"]
